[gd_scene load_steps=2 format=2]

[ext_resource path="res://World/DebugButton.gd" type="Script" id=1]

[node name="DebugButton" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="btn" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="Popup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Popup/Panel/VB"]
margin_right = 1080.0
margin_bottom = 14.0
text = "Name :"
valign = 1

[node name="NameText" type="TextEdit" parent="Popup/Panel/VB"]
margin_top = 34.0
margin_right = 1080.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 32 )

[node name="Health" type="Label" parent="Popup/Panel/VB"]
margin_top = 86.0
margin_right = 1080.0
margin_bottom = 100.0
text = "Health :"

[node name="HealthText" type="TextEdit" parent="Popup/Panel/VB"]
margin_top = 120.0
margin_right = 1080.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Label" parent="Popup/Panel/VB"]
margin_top = 172.0
margin_right = 1080.0
margin_bottom = 186.0
text = "Inventory :"

[node name="InventoryText" type="TextEdit" parent="Popup/Panel/VB"]
margin_top = 206.0
margin_right = 1080.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipment" type="Label" parent="Popup/Panel/VB"]
margin_top = 258.0
margin_right = 1080.0
margin_bottom = 272.0
text = "Equipment :"

[node name="EquipmentText" type="TextEdit" parent="Popup/Panel/VB"]
margin_top = 292.0
margin_right = 1080.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}
